--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -3,37 +3,30 @@
     <script src="DOM/main.js"></script>
 </body>
 
-<!-- <footer class="footer">
-    <nav id="menu-footer" class=" bg-blue-900 bg-opacity-80 text-black flex flex-row items-center justify-center space-y-6 space-x-4">
-      <!-- Logo -->
-      <!-- <div class="logo-div">
-        <img class="logo w-50" src="/images/logo.png" alt="logo-cine-delice">
-        </div>
-        <p><a href="./catalogue.ejs" class="hover:text-white-400">Catalogue</a></p>
-        <p><a href="./film&serie.ejs" class="hover:text-white-400">Film&serie</a></p>
-        <p><a href="./CGU.ejs" class="hover:text-white-400">CGU</a></p>
-        <p><a href="./mentions-legales.ejs" class="hover:text-white-400">mentions-legales</a></p>
-        <p>Copyright 2025</p>
-    </nav>
-</footer> --> 
-
 <footer class="footer">
-    <nav id="menu-footer" class="bg-blue-900 bg-opacity-80 text-black flex flex-col items-center justify-center p-6">
-       
+    <nav id="menu-footer" class="bg-orange-50 shadow-md text-black flex flex-col items-center justify-center p-6">
+        <!-- class="bg-blue-900 bg-opacity-80 text-black flex flex-col items-center justify-center p-6"> -->
         <!-- Logo -->
         <div class="mb-4">
-            <img class="logo w-20" src="/images/logo.png" alt="logo-cine-delice">
+            <!-- <img class="logo w-20" src="/images/logo.png" alt="logo-cine-delice"> -->
+            <img class="logo w-20 mb-6" src="/images/CineDelice_logo_120px.svg" alt="logo-cine-delice">
         </div>
         <!-- Liens du footer -->
         <div class="grid grid-cols-1 md:flex md:space-x-6 gap-4 text-center">
-            <p><a href="/catalogue" class="hover:text-white">Catalogue</a></p>
-            <p><a href="/films-series" class="hover:text-white">Film & Série</a></p>
-            <p><a href="/CGU" class="hover:text-white">CGU</a></p>
-            <p><a href="/mentions-legales" class="hover:text-white">Mentions Légales</a></p>
+            <p><a href="/catalogue" class="hover:text-orange-600">Catalogue</a></p>
+            <p><a href="/films-series" class="hover:text-orange-600">Film & Série</a></p>
+            <p><a href="/CGU" class="hover:text-orange-600">CGU</a></p>
+            <p><a href="/mentions-legales" class="hover:text-orange-600">Mentions Légales</a></p>
         </div>
 
         <!-- Copyright -->
-        <p class="mt-4 text-white">Copyright 2025 ©</p>
+        <!-- <p class="mt-4 text-white">Copyright 2025 ©</p> -->
+        <p class="mt-5 text-orange-600 text-center"> Ciné Délice. Tous droits réservés.</p>
+        <p class="mt-2 text-orange-600">Copyright &copy; <span id="current-year"></span></p>
     </nav>
 </footer>
+<script>
+    // année actuelle et l'afficher dans l'élément span avec l'ID "current-year"
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+  </script>
 </html>
